--- a/index.html
+++ b/index.html
@@ -6,144 +6,114 @@
     <title>Football Matches Update</title>
 </head>
 <body>
-    <?php
-    // Function to fetch data from a URL using cURL
-    function get_data($url, $headers = []) {
-        $ch = curl_init();
-        $timeout = 60; // Timeout in seconds
-        curl_setopt($ch, CURLOPT_URL, $url);
-        curl_setopt($ch, CURLOPT_RETURNTRANSFER, 1);
-        curl_setopt($ch, CURLOPT_USERAGENT, "Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 6.0)");
-        curl_setopt($ch, CURLOPT_SSL_VERIFYHOST, false);
-        curl_setopt($ch, CURLOPT_SSL_VERIFYPEER, false);
-        curl_setopt($ch, CURLOPT_MAXREDIRS, 10);
-        curl_setopt($ch, CURLOPT_FOLLOWLOCATION, 1);
-        curl_setopt($ch, CURLOPT_CONNECTTIMEOUT, $timeout);
-        if (!empty($headers)) {
-            curl_setopt($ch, CURLOPT_HTTPHEADER, $headers);
-        }
-        $data = curl_exec($ch);
-        curl_close($ch);
-        return $data;
-    }
-
-    try {
-        // Cloudinary credentials
-        $cloudinary_cloud_name = "dqzelggjc";
-        $cloudinary_api_key = "128433947257472";
-        $cloudinary_api_secret = "hmoYrAusm9CfLjv1uX69kfE-dbI";
-        $upload_preset = "ml_default";
-
-        // File path to matches.json on Cloudinary
-        $matchesFile = 'matches.json';
-
-        // Step 1: Load JSON from Cloudinary
-        $json_url = 'https://res.cloudinary.com/' . $cloudinary_cloud_name . '/raw/upload/' . $matchesFile;
-        $json_data = get_data($json_url);
-
-        if (!$json_data) {
-            die("Failed to fetch JSON data from Cloudinary.");
+    <h1>Football Matches Update</h1>
+    <div id="result"></div>
+    <script>
+        async function fetchData(url, headers = {}) {
+            const response = await fetch(url, { headers });
+            if (!response.ok) {
+                throw new Error(`Failed to fetch data from ${url}`);
+            }
+            return await response.json();
         }
 
-        // Step 2: Decode JSON data into an array of objects
-        $matches = json_decode($json_data);
+        async function uploadFile(url, file, params) {
+            const formData = new FormData();
+            for (const [key, value] of Object.entries(params)) {
+                formData.append(key, value);
+            }
+            formData.append('file', file);
 
-        if (!$matches) {
-            die("Failed to decode JSON data from Cloudinary.");
-        }
+            const response = await fetch(url, {
+                method: 'POST',
+                body: formData
+            });
 
-        // Step 3: Remove matches older than yesterday
-        $yesterday = strtotime('-2 days');
-        $filtered_matches = array_filter($matches, function($match) use ($yesterday) {
-            $match_date = strtotime($match->match_date);
-            return $match_date > $yesterday;
-        });
-
-        // Step 4: Process each remaining match
-        foreach ($filtered_matches as &$match) {
-            $match_url = $match->match_url;
-
-            // Step 5: Fetch HTML for each match_url
-            $html = get_data($match_url);
-
-            if (!$html) {
-                echo "Failed to fetch HTML content for match: " . $match_url . "<br>";
-                continue;
+            if (!response.ok) {
+                throw new Error('Failed to upload file to Cloudinary.');
             }
 
-            // Use DOMDocument to parse HTML
-            $dom = new DOMDocument();
-            libxml_use_internal_errors(true); // Disable libxml errors
-            $dom->loadHTML($html);
+            return await response.json();
+        }
 
-            // Find the specific <div class="main-result">
-            $xpath = new DOMXPath($dom);
-            $divClass = 'main-result';
-            $mainResultDiv = $xpath->query("//div[contains(@class, '$divClass')]")->item(0);
+        async function processMatches() {
+            try {
+                // Cloudinary credentials
+                const cloudinaryCloudName = "dqzelggjc";
+                const cloudinaryApiKey = "128433947257472";
+                const cloudinaryApiSecret = "hmoYrAusm9CfLjv1uX69kfE-dbI";
+                const uploadPreset = "ml_default";
 
-            // Initialize scores
-            $score1 = 0;
-            $score2 = 0;
+                // File path to matches.json on Cloudinary
+                const matchesFile = 'matches.json';
 
-            if ($mainResultDiv) {
-                // Extract scores from <div class="main-result">
-                $bElements = $xpath->query(".//b", $mainResultDiv);
+                // Step 1: Load JSON from Cloudinary
+                const jsonUrl = `https://res.cloudinary.com/${cloudinaryCloudName}/raw/upload/${matchesFile}`;
+                const matches = await fetchData(jsonUrl);
 
-                if ($bElements->length >= 2) {
-                    $score1 = (int) $bElements->item(0)->nodeValue;
-                    $score2 = (int) $bElements->item(1)->nodeValue;
+                // Step 2: Remove matches older than yesterday
+                const yesterday = new Date();
+                yesterday.setDate(yesterday.getDate() - 2);
+
+                const filteredMatches = matches.filter(match => {
+                    const matchDate = new Date(match.match_date);
+                    return matchDate > yesterday;
+                });
+
+                // Step 3: Process each remaining match
+                for (const match of filteredMatches) {
+                    const matchUrl = match.match_url;
+                    const html = await fetch(matchUrl).then(response => response.text());
+
+                    const parser = new DOMParser();
+                    const doc = parser.parseFromString(html, 'text/html');
+                    const mainResultDiv = doc.querySelector('.main-result');
+
+                    if (mainResultDiv) {
+                        const scores = mainResultDiv.querySelectorAll('b');
+                        if (scores.length >= 2) {
+                            match.score1 = parseInt(scores[0].textContent, 10);
+                            match.score2 = parseInt(scores[1].textContent, 10);
+                        }
+                    } else {
+                        match.score1 = 0;
+                        match.score2 = 0;
+                    }
                 }
+
+                // Step 4: Save updated matches to a temporary file
+                const tempFile = new Blob([JSON.stringify(filteredMatches, null, 2)], { type: 'application/json' });
+
+                // Step 5: Upload updated matches.json to Cloudinary
+                const cloudinaryUrl = `https://api.cloudinary.com/v1_1/${cloudinaryCloudName}/auto/upload`;
+                const timestamp = Math.floor(Date.now() / 1000);
+                const publicId = 'results.json';
+                const signature = CryptoJS.SHA1(`invalidate=true&public_id=${publicId}&timestamp=${timestamp}&upload_preset=${uploadPreset}${cloudinaryApiSecret}`).toString();
+
+                const uploadResponse = await uploadFile(cloudinaryUrl, tempFile, {
+                    upload_preset: uploadPreset,
+                    timestamp: timestamp,
+                    api_key: cloudinaryApiKey,
+                    signature: signature,
+                    invalidate: 'true',
+                    public_id: publicId
+                });
+
+                document.getElementById('result').innerText = "Data successfully saved and uploaded to Cloudinary!";
+                console.log(uploadResponse);
+
+                // Display JSON result
+                const pre = document.createElement('pre');
+                pre.textContent = JSON.stringify(filteredMatches, null, 2);
+                document.body.appendChild(pre);
+
+            } catch (error) {
+                console.error("Error:", error);
+                document.getElementById('result').innerText = `Error: ${error.message}`;
             }
-
-            // Update scores in the match object
-            $match->score1 = $score1;
-            $match->score2 = $score2;
         }
 
-        // Step 6: Save updated matches to a temporary file
-        $temp_file = tempnam(sys_get_temp_dir(), 'matches');
-        file_put_contents($temp_file, json_encode(array_values($filtered_matches), JSON_PRETTY_PRINT | JSON_UNESCAPED_UNICODE));
-
-        // Step 7: Upload updated matches.json to Cloudinary
-        $cloudinary_url = "https://api.cloudinary.com/v1_1/{$cloudinary_cloud_name}/auto/upload";
-        $timestamp = time();
-        $public_id = 'results.json'; // Specify the public_id for the file name
-        $signature = sha1("invalidate=true&public_id={$public_id}&timestamp={$timestamp}&upload_preset={$upload_preset}{$cloudinary_api_secret}");
-
-        $curl = curl_init();
-        curl_setopt_array($curl, array(
-            CURLOPT_URL => $cloudinary_url,
-            CURLOPT_RETURNTRANSFER => true,
-            CURLOPT_POST => true,
-            CURLOPT_POSTFIELDS => array(
-                'file' => new CURLFile($temp_file),
-                'upload_preset' => $upload_preset,
-                'timestamp' => $timestamp,
-                'api_key' => $cloudinary_api_key,
-                'signature' => $signature,
-                'invalidate' => 'true',
-                'public_id' => $public_id // Include public_id in the POST fields
-            ),
-        ));
-        $response = curl_exec($curl);
-        curl_close($curl);
-
-        // Handle Cloudinary API response
-        if ($response) {
-            echo "Data successfully saved and uploaded to Cloudinary!";
-        } else {
-            echo "Failed to upload matches to Cloudinary.";
-        }
-
-        // Clean up: Delete the temporary file
-        unlink($temp_file);
-
-        // Show JSON result
-        echo '<pre>' . json_encode(array_values($filtered_matches), JSON_PRETTY_PRINT | JSON_UNESCAPED_UNICODE) . '</pre>';
-
-    } catch (Exception $e) {
-        die("Error: " . $e->getMessage());
-    }
-    ?>
+        processMatches();
+    </script>
 </body>
 </html>
