--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Football Matches Update</title>
+    <title>TttFootball Matches Update</title>
 </head>
 <body>
     <h1>Football Matches Update</h1>
