--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 const uploadPreset = "ml_default";
 
                 // File path to matches.json on Cloudinary
-                const jsonUrl = `https://res.cloudinary.com/${cloudinaryCloudName}/raw/upload/matches.json`;
+                const jsonUrl = `https://res.cloudinary.com/${cloudinaryCloudName}/raw/upload/results.json`;
                 const response = await fetch(jsonUrl);
+
                 if (!response.ok) {
                     throw new Error('Failed to fetch JSON data from Cloudinary results1.');
                 }
